vlib/v/checker/tests/filter_func_return_nonbool_err.vv
fn main() {
	list := [1,2,3].filter(stringsss(it))
}

fn stringsss(arg int) string {
	return ''
}